Make SBT project functional

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
-.scalafmt.conf
+*.class
+*.log
+*.iml
+*.ipr
+*.iws
 .idea
+.bsp
 out
+.cache/
+.history/
+.lib/
+dist/*
+target/
+bin/
+libexec/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+logs/
+project/*-shim.sbt
+project/project/
+project/target/
+.scala_dependencies
+.worksheet
